# Carestral-mcp

./: .env.example  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  mcp.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: USAGE.md  client_config.py
scripts/: demo_queries.py  test_all_tools.py  test_db_connection.py
src/: __init__.py  auth.py  database.py  server.py
src/carestral_mcp/: __main__.py  server.py
src/models/: db_models.py  orm_models.py
src/services/: db_service.py
tests/: conftest.py  test_db_connection.py  test_mcp_client.py  test_server.py
