[project]
name = "carestral-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server to connect doctors, hospitals and patients worldwide with AI-powered symptom assessment"
authors = [
    {name = "Carestral Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp[cli]>=2.14.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
