[project]
name = "carestral-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server to connect doctors, hospitals and patients worldwide with AI-powered symptom assessment"
authors = [
    {name = "Mathéo V", email = "MathVov.91@outlook.fr"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
